# fetch-rs

./: .dockerignore  .gitignore  .gitlab-ci.yml  .jshintrc  Cargo.toml  Dockerfile  README.md  api.go  common.go  config.go  config.json  config.toml  docker-compose.yml  fetch.go  kitsu.go  magnetrss.go  main.go  mal.go  nyaa.go  package-lock.json  package.json  provider.go  run.go  tsconfig.json  web.go  webpack.config.js
.github/workflows/: rust.yml
bundle/: bulma.scss  main.jsx  main.tsx  model.ts  series.jsx  store.js  store.ts  style.scss  test.jsx
bundle/components/: app.jsx  app.tsx  edit.jsx  edit.tsx  handler.jsx  handler.tsx  home.jsx  home.tsx  infoList.jsx  infoList.tsx  new.jsx  new.tsx  route.jsx  seriesCard.jsx  seriesCard.tsx  seriesForm.jsx  seriesForm.tsx  uri.jsx  uriList.jsx  view.jsx  view.tsx
bundle/components/handlers/: image.jsx  image.tsx  url.jsx  url.tsx
bundle/components/uri/: default.jsx  image.jsx
bundle/pages/: app.tsx  edit.tsx  home.tsx  new.tsx  view.tsx
cmd/fetcher/: main.go
cmd/fetcherd/: main.go
cmd/sitesync/: main.go
deploy/: dev.sh  docker-compose-dev.yml  manage.sh
deploy/backup/: fetch-backup
deploy/docker/: docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-uat.yml  init-secerts.sh  watch-dev.sh
deploy/docker/api/: watch-dev.sh
deploy/docker/web/service.d/: api.conf
deploy/scripts/: kitsu-import
migrations/20170121043519_create_series/: up.sql
migrations/20170215205916_add_info_uri/: up.sql
migrations/20170226011654_delete_cascade/: up.sql
migrations/20170404210858_add_poster_uri/: down.sql
migrations/2018-03-01-075348_drop_info_blob_primary/: down.sql
public/: index.html
services/api/: Cargo.toml  Dockerfile  Dockerfile-migrate  config.toml
services/api/migrations/20170215205916_add_info_uri/: down.sql
services/api/migrations/20170226011654_delete_cascade/: down.sql
services/api/migrations/20170404210858_add_poster_uri/: up.sql
services/api/migrations/20171028080832_cutFields/: down.sql  up.sql
services/api/migrations/2018-01-14-010802_uri_to_json/: down.sql  up.sql
services/api/migrations/2018-01-17-074114_add_info_type/: down.sql  up.sql
services/api/migrations/2018-03-01-075348_drop_info_blob_primary/: up.sql
services/api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  util.rs
services/api/src/data/: memory.rs  mod.rs  pgsql.rs
services/api/src/models/: info_blob.rs  mod.rs  schema.rs  series.rs
services/api/src/routes/: mod.rs
services/api/src/routes/api/: info_blob.rs  mod.rs  series.rs
services/api/src/templates/: index.hbs
services/api/tests/: matches.rs  routes.rs
services/fetch/: .dockerignore  Dockerfile  LICENSE.md  common.go  config.go  magnetrss.go  makefile  provider.go  web.go
services/fetch/cmd/fetcherd/: main.go
services/get/: Dockerfile  README.md  config.toml  fetch.go  nyaa.go  provider.go  web.go
services/sync/: .dockerignore  .gitignore  Dockerfile  config.go  config.toml  kitsu.go  makefile  mal.go  run.go  web.go
services/sync/cmd/sitesync/: main.go
services/web/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js
services/web/src/: api.ts  bulma.scss  main.tsx  model.ts  reducer.ts  store.ts  style.scss
services/web/src/actions/: app.ts  fetch.ts  infoblob.ts  series.ts
services/web/src/components/: handler.tsx  infoElement.tsx  infoList.tsx  navbar.tsx  seriesCard.tsx  seriesForm.tsx
services/web/src/pages/: app.tsx  edit.tsx  fetch.tsx  home.tsx  new.tsx  view.tsx
src/: config.rs  db.rs  docker-entrypoint.sh  error.rs  handlers.rs  main.rs  middleware.rs  schema.rs  util.rs
src/backend/: config.rs  db.rs  error.rs  handlers.rs  main.rs  middleware.rs  schema.rs  util.rs
src/backend/models/: info_blob.rs
src/backend/routes/: mod.rs
src/deploy/api/: Dockerfile  config.toml  dev.sh
src/deploy/migrate/: Dockerfile
src/deploy/web/: Dockerfile  web.conf
src/frontend/: actions.ts  api.ts  bulma.scss  index.html  main.tsx  model.ts  reducer.ts  store.ts  style.scss
src/frontend/components/: handler.tsx  infoList.tsx  seriesCard.tsx  seriesForm.tsx
src/frontend/pages/: app.tsx  edit.tsx  home.tsx  view.tsx
src/frontend/reducers/: app.ts  infoblob.ts  series.ts
src/models/: info_blob.rs  info_uri.rs  mod.rs  series.rs
src/routes/: api.rs  mod.rs
src/routes/api/: info_blob.rs  info_uri.rs  mod.rs  series.rs
templates/: index.html.tera
(+19 files in other folders)
