[package]
authors = ["David Barnett <david@barnett.net.nz>"]
name = "fetch-rocket"
version = "0.1.0"

[dependencies]
# clippy = "^0.0.143"
dotenv = "^0.8.0"
error-chain = "^0.8.1"
lazy_static = "0.2.2"
r2d2 = "0.7.1"
r2d2-diesel = "^0.15.0"
rocket = "^0.3.0"
rocket_codegen = "^0.3.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.diesel]
features = ["chrono"]
version = "^0.15.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "^0.15.0"

[dependencies.rocket_contrib]
default_features = false
features = ["json"]
version = "^0.3.0"
