[package]
authors = ["David Barnett <david@barnett.net.nz>"]
name = "fetch-rs"
version = "0.1.0"

[dependencies]
dotenv = "^0.8.0"
error-chain = "^0.8.1"
iron = "0.6.0"
mount = "0.4.0"
r2d2 = "0.7.1"
r2d2-diesel = "^0.15.0"
router = "0.6.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
hyper  = "^0.10.13"
filetime = "0.1.14"
time = "0.1.39"
iron-test = "0.6.0"
durationfmt = "0.1.1"

[dependencies.staticfile]
features = ["cache"]
version = "0.5.0"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.diesel]
features = ["chrono"]
version = "^0.15.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "^0.15.0"
