[package]
authors = ["David Barnett <david@barnett.net.nz>"]
name = "fetch-api"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "fetch-api"
path = "src/main.rs"

[dependencies]
dotenv = "^0.13.0"
error-chain = "^0.12"
iron = "^0.6.0"
iron-test = "^0.6.0"
mount = "^0.4.0"
r2d2 = "^0.8.0"
router = "^0.6.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
structopt = "^0.2"
structopt-derive = "^0.2"
toml = "0.4.5"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.diesel]
features = [
    "chrono",
    "postgres",
    "serde_json",
    "r2d2",
]
version = "^1.1.0"

[dependencies.diesel_derives]
features = ["postgres"]
version = "^1.1.0"
